--- a/BaseIdentity/Views/Shared/Components/MainDetailedBlogs/Default.cshtml
+++ b/BaseIdentity/Views/Shared/Components/MainDetailedBlogs/Default.cshtml
@@ -2,7 +2,7 @@
 @model List<Blog>
 
 <div class="col-md-8">
-    <h5 class="font-weight-bold spanborder"><span>All Stories</span></h5>
+    <h5 class="font-weight-bold spanborder"><span>All In Music</span></h5>
     @foreach (var item in Model)
     {
         <div class="mb-3 d-flex justify-content-between">
