--- a/BaseIdentity/Views/Register/SignUp.cshtml
+++ b/BaseIdentity/Views/Register/SignUp.cshtml
@@ -5,27 +5,27 @@
         <h2>Register</h2>
          <br/>
         <div class="form-group" align="center">
-      <input type="text" class="form-control" style="width:230px" placeholder="Name" asp-for="Name" />
+      <input type="text" class="form-control" style="width: 40%;" placeholder="Name" asp-for="Name" />
             <span asp-validation-for="Name" class="text-info"></span>
       </div>
-      <div class="form-group" align="center"><input type="text" class="form-control" style="width:230px" placeholder="Surname" asp-for="Surname" />
+      <div class="form-group" align="center"><input type="text" class="form-control" style="width: 40%;" placeholder="Surname" asp-for="Surname" />
         <span asp-validation-for="Surname" class="text-info"></span>
       </div>
         
-      <div class="form-group" align="center"><input type="text" class="form-control" style="width:230px" placeholder="Username" asp-for="Username" />
+      <div class="form-group" align="center"><input type="text" class="form-control" style="width: 40%;" placeholder="Username" asp-for="Username" />
         <span asp-validation-for="Username" class="text-info"></span>
          </div>
         
-      <div class="form-group" align="center"><input type="text" class="form-control" style="width:230px" placeholder="Mail" asp-for="Mail" />
-        <span asp-validation-for="Mail" class="text-info"></span>
+      <div class="form-group" align="center"><input type="email" class="form-control" style="width: 40%;" placeholder="Mail" asp-for="Email" />
+        <span asp-validation-for="Email" class="text-info"></span>
          </div>
         
-      <div class="form-group" align="center"><input type="text" class="form-control" style="width:230px" placeholder="Password" asp-for="Password" />
+      <div class="form-group" align="center"><input type="text" class="form-control" style="width: 40%;" placeholder="Password" asp-for="Password" />
         <span asp-validation-for="Password" class="text-info"></span>
          </div>
         
-      <div class="form-group" align="center"><input type="text" class="form-control" style="width:230px" placeholder="Confirm Password" asp-for="ConfirmPassword" />
-        <span asp-validation-for="ConfirmPassword" class="text-info"></span>
+      <div class="form-group" align="center"><input type="text" class="form-control" style="width: 40%;" placeholder="Confirm Password" asp-for="PasswordConfirm" />
+        <span asp-validation-for="PasswordConfirm" class="text-info"></span>
          </div>
 
         <div asp-validation-summary="ModelOnly" class="text-success"></div>
