category feature change

--- a/BaseIdentity/Views/Writer/Profile.cshtml
+++ b/BaseIdentity/Views/Writer/Profile.cshtml
@@ -5,19 +5,20 @@
     <div class="jumbotron jumbotron-fluid mb-3 pl-0 pt-0 pb-0 bg-white position-relative">
         <div class="h-100 tofront">
             <div class="row justify-content-between">
-                <div class="col-md-6 pt-6 pb-6 pr-6 align-self-center">
-                    <div class="d-flex align-items-center">
-                        <img class="rounded-circle shadow" src="@ViewBag.userInfo.Image" width="90">
-                        <large class="ml-2">
-                            @ViewBag.userInfo.Name @ViewBag.userInfo.Surname
-                        </large>
-                        &nbsp;&nbsp;
-                        <a href="@ViewBag.userInfo.Facebook"> <span class="iconbox iconsmall rounded-circle text-primary"><i class="fab fa-facebook-f"></i></span></a>
-                        &nbsp;     &nbsp;<a href="@ViewBag.userInfo.Twitter"> <span class="iconbox iconsmall rounded-circle text-info"><i class="fab fa-twitter"></i></span></a>
 
-                    </div>
+                <div class="d-flex align-items-center">
+                    <img class="rounded-circle shadow" src="@ViewBag.userInfo.Image" width="90">
+                    <large class="ml-2">
+                        @ViewBag.userInfo.Name @ViewBag.userInfo.Surname
+                    </large>
+
+                    &nbsp;&nbsp;
+                    <a href="@ViewBag.userInfo.Facebook"> <span class="iconbox iconsmall rounded-circle text-primary"><i class="fab fa-facebook-f"></i></span></a>
+                    &nbsp;  &nbsp;<a href="@ViewBag.userInfo.Twitter"> <span class="iconbox iconsmall rounded-circle text-info"><i class="fab fa-twitter"></i></span></a>
                 </div>
             </div>
+            &nbsp;
+            <h5> About @ViewBag.userInfo.Name:</h5>
             <div class="alert alert-primary shadow-sm" role="alert" style="width: 400px;">
                 @ViewBag.userInfo.About
             </div>
