--- a/BaseIdentity/Views/Shared/Components/Header/Default.cshtml
+++ b/BaseIdentity/Views/Shared/Components/Header/Default.cshtml
@@ -4,15 +4,25 @@
     <ul class="navbar-nav mr-auto d-flex align-items-center">
         @foreach (var item in Model)
         {
-            <li class="nav-item">
-                <a class="nav-link" href="/Category/List/@item.CategoryId">@item.CategoryName <span class="sr-only">(current)</span></a>
-            </li>
+
+            if (item.IsNew != true)
+            {
+                <li class="nav-item">
+                    <a class="nav-link" href="/Category/List/@item.CategoryId">@item.CategoryName <span class="sr-only">(current)</span></a>
+                </li>
+            }
+            else
+            {
+                <li class="nav-item">
+                    <a class="nav-link" href="/Category/List/@item.CategoryId">@item.CategoryName <span class="badge badge-secondary">Yeni!</span> <span class="sr-only">(current)</span></a>
+                </li>
+            }
         }
 
 
-        <li class="nav-item">
+        @*<li class="nav-item">
             <a class="nav-link" href="~/Tema/docs.html">Template <span class="badge badge-secondary">docs</span></a>
-        </li>
+        </li>*@
     </ul>
     <ul class="navbar-nav ml-auto d-flex align-items-center">
         @if (ViewBag.logged != true)
